fixed artisan filter issue on mobile

--- a/src/components/index/index.scss
+++ b/src/components/index/index.scss
@@ -64,12 +64,13 @@
 }
 
 .second-block {
-  // position: relative;
+  position: relative;
   padding-bottom: 1em;
   display: flex;
   order: 3;
   min-height: 350px;
   margin-bottom: 1em;
+  
   // @media all and (max-width: 768px) {
   //   min-height: calc(300px + 2em);
   // }
@@ -100,6 +101,7 @@
     display: flex;
     justify-content: space-between;
     margin: 10px auto;
+    overflow-x: scroll;
     // align-items: center;
     @media all and(max-width:767px) {
       height: fit-content;
@@ -196,7 +198,7 @@
       cursor: pointer;
       img {
         border-radius: 10px 10px 0 0;
-        height: 80%;
+        height: 180px;
         @media all and (max-width: 767px) {
           height: 150px;
         }
@@ -252,9 +254,24 @@
         }
         .carousel-inner {
           width: 80%;
+
+         
           .carousel-item {
+            span{
+              @media all and (max-width: 767px) {
+                width: 50%;
+                max-height: 180px;
+                img{
+                  min-height: 150px;
+                }
+              }
+            }
+  
             img {
               width: 100%;
+              // @media all and (max-width: 767px) {
+              //   width: 50%;
+              // }
             }
             .desc {
               position: absolute;
@@ -396,6 +413,10 @@
     }
     .carousel-inner {
       width: 100%;
+      @media all and (max-width: 767px) {
+        height: auto;
+
+      }
       .carousel-item {
         .carouselImage {
           width: 100%;
@@ -795,7 +816,7 @@
   @each $current-color in $category-colors {
     $i: index($category-colors, $current-color);
     .place-nav-item:nth-child(#{$i}) {
-      position: relative;
+      // position: relative;
       // min-width: 180px;
       // width: 23%;
       // box-shadow: 0.5px 0.5px 2px 0.5px rgba(0, 0, 0, 0.2);
@@ -882,6 +903,7 @@
   }
 }
 
+
 @media screen and (min-width: 768px) {
   .popular-artist-mobile {
     display: none !important;
@@ -903,11 +925,13 @@
       box-shadow: 5px 2px 5px 0 rgba(0, 0, 0, 0.09);
       border-radius: 10px;
       margin-right: 20px;
-      height: 100%;
+      height: auto;
+      margin: 0 0 45px 0;
+      width: 92%;
       cursor: pointer;
       > img {
         border-radius: 10px 10px 0 0;
-        height: 80%;
+        max-height: 170px;
       }
       .title {
         color: black;
@@ -932,7 +956,7 @@
     }
     .carousel-indicators {
       margin-bottom: 0rem;
-      bottom:-20px;
+      bottom:17px;
     }
   }
 }
